...
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@android:drawable/ic_menu_search"
                    app:tint="@color/teal_200" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:background="@null"
                    android:hint="Cari resep masakan..."
                    android:imeOptions="actionSearch"
...
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="-20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:id="@+id/containerPopuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

...
