...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Resep"
                        android:textColor="#757575"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/tvTotalResep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
...
                    android:layout_height="wrap_content"
                    android:text="Total User"
                    android:textColor="#757575"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
...
